Add content to recipe page and creat images folder
Added an image, description, ingredients and steps
to pancakes recipe page
Created an images folder to save all the images that will be used in the
project

--- a/recipes/buttermilk-pancakes.html
+++ b/recipes/buttermilk-pancakes.html
@@ -7,6 +7,32 @@
 </head>
 <body>
     <h1>Buttermill Pancakes Recipe</h1>
+        <img src="../images/Buttermilk-pancakes.jpg" alt="An image of buttermilk pancakes" width="500">
+    <h2>Description</h2>
+        <p>As convenient as a store-bought mix can be, every home cook needs a good buttermilk pancake recipe in their repertoire. 
+            Don't have a tried-and-true favorite yet? You're in luck! The Allrecipes community can't get enough of these classic buttermilk pancakes. 
+            Reviewers say they're light, fluffy, moist, and full of rich flavor</p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>Flour</li>
+            <li>Sugar</li>
+            <li>Leaveners</li>
+            <li>Salt</li>
+            <li>Buttermilk</li>
+            <li>Milk</li>
+            <li>Eggs</li>
+            <li>Butter</li>
+        </ul>
+    <h2>Steps</h2>
+        <ol>
+            <li>Mix the dry ingredients: Combine flour, sugar, baking powder, baking soda, and salt in a large bowl.</li>
+            <li>Mix the wet ingredients: Beat the buttermilk, milk, eggs, and melted butter together in a separate bowl. 
+                Do not combine the wet and dry ingredients until right before you cook the pancakes.</li>
+            <li>Make the pancakes: Add the wet ingredients to the dry ingredients and mix with a wooden spoon or fork until the mixtures are just-blended. 
+                Scoop the batter onto a hot, oiled griddle and cook until the pancake is bubbly on the top. Flip with a spatula and cook until both sides 
+                are brown. </li>
+
+        </ol>
     <a href="../index.html">Home</a>
 </body>
 </html>
