--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>                                                                     
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/buttermilk-pancakes.html">Buttermilk Pancakes</a>
+    <ul>
+        <li><a href="recipes/buttermilk-pancakes.html">Buttermilk Pancakes</a></li>
+        <li><a href="recipes/boursin-omelet.html">Boursin Omelet</a></li>
+        <li><a href="recipes/scotch-eggs.html">Scotch Eggs</a></li>
+    </ul>
 </body>
 </html>                  
